css/styles.css
*{
    box-sizing: border-box;

    font-family: 'Source Sans Pro', sans-serif;

}
html, body{
    margin: 0;
    padding: 0;

    height: 100%;
    width: 100%;
}

.wrapper{
    background: var(--log-color);

    min-height: 2000px;
}

/* NAV:                                                 */

.nav{
    background: var(--nav-color);

    max-width: 100%;
    height: 65px;

    padding: 0px 33px;

    display: grid;

    grid-template-columns: 1fr 1fr;

    grid-template-areas: 
    "nav__logo nav__menu";

    position: fixed;
    width: 100%;
}

.nav__logo{
    max-height: 65px; 
    max-width: 300px;
}

.nav__menu{
    max-height: 65px; 
}

.nav__list{

    list-style-type: none;
    
    display: flex;    
    justify-content: flex-end;
    align-items: center;

    margin: 0px auto;
}

.nav__positions{
    padding: 0px 32px;

    font-size: 24px;
    line-height: 24px;
}

.space__filler{
    height: 500px;
    background: var(--primary-color);
}


/* TEAM:                                */

.team{
    background: var(--secondary-color);

    padding: 32px;

    min-height: 700px;
}

.team__header{
    font-size: 48px;
}

.team__container{
    margin: 0px;

    display: grid;
    
    grid-template-columns: repeat(4, 425px);
    grid-auto-rows: minmax(330px, 450px);
    
    grid-template-areas: "team__member1 team__member2 team__member3 team__member4";

    grid-gap: 20px;
}

.team__window{
   max-height: 350px; 
   max-width: 425px;
}

.team__space__filler{
    height: 100px;
}

.team__box{

    height: 275px; 
    width: 425px;

    border: 3px solid var(--log-color);
    border-radius: 3px;

    display: grid;
    grid-template-columns: 1fr;
    grid-auto-rows: repeat(30px, auto);

}

.team__member__pic{
    width: 150px;
    height: 150px;
    border-radius: 50%;

    margin: -70px auto;

    justify-self: center;
}

.team__box__info{
    justify-self: center;

}

.team__member__name{
    font-size: 32px;

    margin: 10px;
    padding-top: 30px;
}

.team__member__title{
    text-align: center;
    font-size: 18px;

    margin: 20px;
}

.team__member__info{
    width: 100px;
    margin: 0px auto;
    
    display: flex;

    justify-content: space-around;
}

.team__member1{
    grid-area: team__member1;
}

.team__member2{
    grid-area: team__member2;
}

.team__member3{
    grid-area: team__member3;
}

.team__member4{
    grid-area: team__member4;
}

